--- a/Random/Base.lproj/LaunchScreen.storyboard
+++ b/Random/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,51 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="2Z8-9O-MhF">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xel-un-Kj1">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="133.5"/>
+                                        <color key="backgroundColor" red="0.81568627450980391" green="0.9882352941176471" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8o-O4-fuh">
+                                        <rect key="frame" x="0.0" y="133.5" width="375" height="133.5"/>
+                                        <color key="backgroundColor" red="0.81568627450980391" green="0.92549019607843142" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u2B-B8-8ol">
+                                        <rect key="frame" x="0.0" y="267" width="375" height="133"/>
+                                        <color key="backgroundColor" red="0.81568627450980391" green="0.86274509803921573" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V0a-4N-tQm">
+                                        <rect key="frame" x="0.0" y="400" width="375" height="133.5"/>
+                                        <color key="backgroundColor" red="0.81568627450980391" green="0.80000000000000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cxa-nu-QpO">
+                                        <rect key="frame" x="0.0" y="533.5" width="375" height="133.5"/>
+                                        <color key="backgroundColor" red="0.81568627450980391" green="0.73725490196078436" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="u2B-B8-8ol" firstAttribute="height" secondItem="xel-un-Kj1" secondAttribute="height" id="0SX-ZL-aKF"/>
+                                    <constraint firstItem="cxa-nu-QpO" firstAttribute="height" secondItem="xel-un-Kj1" secondAttribute="height" id="Eze-b9-Kif"/>
+                                    <constraint firstItem="f8o-O4-fuh" firstAttribute="height" secondItem="xel-un-Kj1" secondAttribute="height" id="Llt-wG-cjy"/>
+                                    <constraint firstItem="V0a-4N-tQm" firstAttribute="height" secondItem="xel-un-Kj1" secondAttribute="height" id="Ztl-uy-A8W"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="2Z8-9O-MhF" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="0O4-bv-bMO"/>
+                            <constraint firstAttribute="bottom" secondItem="2Z8-9O-MhF" secondAttribute="bottom" id="Eda-NV-R1x"/>
+                            <constraint firstAttribute="trailing" secondItem="2Z8-9O-MhF" secondAttribute="trailing" id="HSj-ri-S8T"/>
+                            <constraint firstItem="2Z8-9O-MhF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="s5G-VW-kVR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
 </document>
